name:                mtphotosite
version:             0.1.0.0
synopsis:            Photography portfolio site made with Hakyll
license:             BSD3
license-file:        LICENSE
author:              Mauro Taraborelli
maintainer:          mauro@maurotaraborelli.com
copyright:           © 2014 Mauro Taraborelli
homepage:            https://github.com/maurotrb/mtphotosite
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable mtphotosite
  main-is:             Main.hs
  build-depends:       base              ==4.*
                     , hakyll            ==4.4.*
  hs-source-dirs:      src
  default-language:    Haskell2010